--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.root {
+  display: flex;
+  height: 100%;
+}
+
+.content {
+  flex-grow: 1;
+  padding: 1em;
+  width: 100%;
+}
+
+.toolbar {
+  height: 80px;
+}
+
+.container-space-around {
+  display: flex;
+  justify-content: space-around;
+  margin: 10px 0 !important;
+  flex-direction: 'row';
+}
+
+.buttons-container {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+@media screen and (max-width:600px) {
+  .search-box {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .search-input {
+    margin-top: -10px;
+    margin-bottom: 10px;
+  }
+
+  .container-space-around {
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
 }
