--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
 /* Hide scrollbar for IE, Edge and Firefox */
 * {
+  -webkit-tap-highlight-color: transparent;
   -ms-overflow-style: none;
   /* IE and Edge */
   scrollbar-width: none;
@@ -15,6 +16,7 @@
   max-width: 1600px;
   display: flex;
   height: 100%;
+  margin: auto;
 }
 
 .content {
@@ -25,6 +27,21 @@
 
 .toolbar {
   height: 80px;
+}
+
+.movie-card__description {
+  font-size: 14px;
+  margin-block: 1rem;
+  text-align: justify;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -moz-box;
+  -webkit-box-orient: vertical;
+  box-orient: vertical;
+  -moz-box-orient: vertical;
+  -webkit-line-clamp: 5;
+  line-clamp: 5;
+  opacity: 0.7;
 }
 
 .container-space-around {
@@ -41,7 +58,12 @@
   flex-wrap: wrap;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 599px) {
+  .movie-card__description {
+    -webkit-line-clamp: unset;
+    line-clamp: unset;
+  }
+
   .search-box {
     display: flex;
     justify-content: center;
