fix: fix the service worker, fix UI issues

--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,12 @@
     flex-wrap: wrap;
   }
 }
+
+@media (display-mode: standalone) {
+  * {
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+  }
+}
